--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "doxygen-awesome-css"]
+[submodule "docsrc/doxygen-awesome-css"]
 	path = docsrc/doxygen-awesome-css
 	url = https://github.com/jothepro/doxygen-awesome-css.git
